# Eden_Music_Scene

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cascade Project Directive.md  EULA_TEMPLATE.txt  LICENSE  LICENSE_COMMERCIAL.md  PACKAGING.md  README.md  README_PUBLISH.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_READINESS_SUMMARY.md  SECURITY.md  SELLING_GUIDE.md  UPGRADEME.md  adaptive_interface.py  emotion_service.py  emotion_tags_client.py  enhanced_resonance.py  music_topic_gen.py  pyproject.toml  pytest.ini  release.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-publish.yml  ci.yml  python-tests.yml  test.yml  ultimate.yml
EchoDJ/: README.md  dj_agent.py  emotion_tags_client.py  pyproject.toml
EchoPlay/: README.md  _emotion_tags_client.py  emotion_tags_client.py  player.py  pyproject.toml  storage.py
EchoPlay/secrets/: client_secret_7610264765-0he942nuoiul0orkohed5bf774j5m3mr.apps.googleusercontent.com.json
EchoPlay/youtube/: OAUTH_TOKEN_LIFECYCLE.md  youtube_oauth_desktop.py
EchoSplit/: README.md  cli.py  index.html  metadata.json  package-lock.json  package.json
EchoSplit/01_components/: SongDisplay.tsx
EchoSplit/02_services/: emotionTagService.ts  geminiService.ts
EchoSplit/05_data/: canonical_pairings.chaos
EchoSplit/__tests__/: Button.test.tsx
EchoSplit/tests/: conftest.py  test_analysis.py  test_emotion_decoder.py  test_emotion_map.py  test_player.py  test_resonance.py  test_spleeter_runner.py
EdenOS_EchoShare/: README.md  dance_playlist_v1.chaoslink  dance_playlist_v1.json  echoplay_prequel.complete_build.py  echoplay_prequel_complete_build.py  eden_share.complete_build.py  emotion_tags_client.py  pyproject.toml  you_wanna_fuckin_dance.json
Eden_Music_Scene/: run_it_all.ps1
Project_Health/: 🐺 CodeWolf Project Health Report.md
apps/: README.md  __init__.py  echoshare_concept.py
apps/backend/: README.md  (+8 more)
apps/backend/EchoDJ/: dj_agent.py  pyproject.toml
apps/backend/EdenOS_EchoShare/: echoplay_prequel_complete_build.py  eden_share.complete_build.py  edenos_echoshare.complete_mobile_build.py  pyproject.toml
apps/backend/EdenOS_EchoShare/examples/: dance_playlist_v1.json  dance_playlist_v1.txt  you_wanna_fuckin_dance.chaoslink  you_wanna_fuckin_dance.json
apps/backend/EdenOS_EchoShare/examples/playlists/: you_wanna_fuckin_dance.chaoslink  you_wanna_fuckin_dance.txt
docs/: echo_suite_overview.md  eden_music_scene_capabilities.md  emotion_tag_schema.md
scripts/: build_package.py  list_wheel.py  release.sh  verify_install.py
tests/: test_cli_fallback.py  test_complete_build.py  test_dj_agent.py  test_echoplay_prequel.py  test_echoshare.py  test_eden_share_complete_build.py  test_emotion_service.py  test_emotion_tags_client.py  test_playlist_app.py  test_playlist_app_ui.py  test_playlist_cli.py  test_storage.py
(+174 files in other folders)
