[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eden-music-scene"
version = "0.1.0"
description = "Collection of tools for the Eden Music Scene."
readme = "README.md"
authors = [{name = "Eden", email = "eden@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0",
]

[project.scripts]
"dj-agent" = "EchoDJ.dj_agent:main"
"echoplay-prequel" = "EdenOS_EchoShare.echoplay_prequel_complete_build:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
