[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eden-music-scene"
version = "0.1.0"
description = "Collection of tools for the Eden Music Scene."
readme = "README.md"
authors = [{name = "Eden", email = "eden@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0",
]

[project.scripts]
"dj-agent" = "apps.backend.EchoDJ.dj_agent:main"
"echoplay-prequel" = "apps.backend.EdenOS_EchoShare.echoplay_prequel_complete_build:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "apps/backend", "apps/frontend/tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
