[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "EchoDJ"
version = "0.1.0"
description = "DJ agent utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2023.3",
    "ffmpeg-python>=0.2",
    "python-dotenv>=1.0",
]

[project.scripts]
dj-agent = "EchoDJ.dj_agent:main"
